[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sParseSketch"
version = "0.1.0"
description = "A python package for fast sketching with applications on flow cytometry and scRNA-seq data focusing on retaining rare cell populations."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"

authors = [
    {name = "Ehsan Karimiara", email = "e.karimiara@gmail.com" }
    ]

dependencies = [
    "numpy>=1.24",
    "pandas",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/EhsanKA/sParseSketch"

[tool.setuptools]
packages = ["sParseSketch"]
